--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -2,7 +2,7 @@ name: Scheduled Scrape and Build
 
 on:
   schedule:
-    # هر ۶ ساعت یک بار اجرا می‌شود
+    # طبق درخواست شما به هر ۶ ساعت یک بار تغییر کرد
     - cron: '0 */6 * * *'
   workflow_dispatch: # قابلیت اجرای دستی
 
@@ -81,9 +81,8 @@ jobs:
             echo "changes_pushed=true" >> $GITHUB_OUTPUT
           fi
       
-      # --- FIX: New step to purge the GitHub Pages cache ---
       - name: Purge GitHub Pages Cache
         # این مرحله فقط زمانی اجرا می‌شود که مرحله قبل تغییراتی را پوش کرده باشد
         if: steps.commit_step.outputs.changes_pushed == 'true'
-        uses: c-hive/purge-gh-pages-cache-action@v1
+        uses: c-hive/gh-pages-cache-purge-action@v1
 
