--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,16 +1,14 @@
-Name: Scheduled Scrape and Build
+name: Scheduled Scrape and Build
 
 on:
   schedule:
-    # هر ۶ ساعت یک بار اجرا می‌شود
     - cron: '0 */6 * * *'
-  workflow_dispatch: # قابلیت اجرای دستی
+  workflow_dispatch:
 
 jobs:
   build-and-commit:
     permissions:
       contents: write
-      # دسترسی لازم برای پاک‌سازی کش (ایجاد دیپلوی جدید)
       pages: write
     runs-on: ubuntu-latest
     timeout-minutes: 45
@@ -64,7 +62,6 @@ jobs:
             aws s3 cp index.html s3://v2v-data/index.html --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read --content-type "text/html" --cache-control "max-age=300"
           fi
 
-      # --- CHANGE 1: A new step to generate a unique version file ---
       - name: Generate Cache Buster Version
         run: echo "$(date +%s)" > cache_version.txt
 
@@ -75,7 +72,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git add all_live_configs.json || echo "all_live_configs.json not found to commit"
           git add clash_subscription.yaml || echo "clash_subscription.yaml not found to commit"
-          # --- CHANGE 2: Add the new version file to the commit ---
           git add cache_version.txt || echo "cache_version.txt not found to commit"
           
           if git diff-index --quiet HEAD; then
@@ -94,4 +90,3 @@ jobs:
         run: |
           echo "Triggering a new GitHub Pages deployment to purge the cache..."
           gh api --method POST -H "Accept: application/vnd.github+json" /repos/${{ github.repository }}/pages/deployments
-
