--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,37 +1,49 @@
-Name: Scheduled Scrape and Build
+name: Scheduled Scrape and Build
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
   build-and-commit:
     permissions:
       contents: write
+      actions: read
     runs-on: ubuntu-latest
     timeout-minutes: 45
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT || github.token }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           echo ">>> DEBUG: Installing dependencies..."
+          pip install --upgrade pip
           pip install requests PyYAML PyGithub awscli beautifulsoup4
           echo ">>> DEBUG: Dependencies installed."
+
+      - name: Check if scraper script exists
+        run: |
+          if [ ! -f "scraper.py" ]; then
+            echo "ERROR: scraper.py not found!"
+            exit 1
+          fi
+          echo ">>> DEBUG: scraper.py exists."
 
       - name: Preserve previous clash subscription if it exists
         run: |
           echo ">>> DEBUG: Checking for existing clash file to back up..."
           if [ -f "clash_subscription.yaml" ]; then
-            mv clash_subscription.yaml clash_subscription.yaml.bak
+            cp clash_subscription.yaml clash_subscription.yaml.bak
             echo ">>> DEBUG: Backed up clash_subscription.yaml"
           fi
 
@@ -44,9 +56,25 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         timeout-minutes: 40
 
-      - name: Restore previous clash subscription if scraper failed
+      - name: Check scraper output
         run: |
-          echo ">>> DEBUG: Checking if clash file needs to be restored..."
+          echo ">>> DEBUG: Checking scraper output files..."
+          ls -la
+          if [ -f "all_live_configs.json" ]; then
+            echo "✓ all_live_configs.json created"
+          else
+            echo "✗ all_live_configs.json missing"
+          fi
+          if [ -f "clash_subscription.yaml" ]; then
+            echo "✓ clash_subscription.yaml created"
+          else
+            echo "✗ clash_subscription.yaml missing"
+          fi
+
+      - name: Restore previous clash subscription if scraper failed
+        if: failure()
+        run: |
+          echo ">>> DEBUG: Scraper failed, checking if clash file needs to be restored..."
           if [ ! -f "clash_subscription.yaml" ] && [ -f "clash_subscription.yaml.bak" ]; then
             mv clash_subscription.yaml.bak clash_subscription.yaml
             echo ">>> DEBUG: Restored clash file from backup."
@@ -59,42 +87,92 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_KEY_SECRET }}
         run: |
           echo ">>> DEBUG: Uploading files to ArvanCloud..."
+          
+          # Check if AWS credentials are available
+          if [ -z "$AWS_ACCESS_KEY_ID" ] || [ -z "$AWS_SECRET_ACCESS_KEY" ]; then
+            echo "WARNING: AWS credentials not found, skipping upload"
+            exit 0
+          fi
+          
           ENDPOINT_URL="https://s3.ir-thr-at1.arvanstorage.ir"
           BUCKET_NAME="s3://v2v-data"
+          
           if [ -f "all_live_configs.json" ]; then
-            aws s3 cp all_live_configs.json "$BUCKET_NAME/all_live_configs.json" --endpoint-url "$ENDPOINT_URL" --acl public-read --cache-control "max-age=300"
+            echo "Uploading all_live_configs.json..."
+            aws s3 cp all_live_configs.json "$BUCKET_NAME/all_live_configs.json" \
+              --endpoint-url "$ENDPOINT_URL" \
+              --acl public-read \
+              --cache-control "max-age=300" || echo "Failed to upload all_live_configs.json"
           fi
+          
           if [ -f "clash_subscription.yaml" ]; then
-            aws s3 cp clash_subscription.yaml "$BUCKET_NAME/clash_subscription.yaml" --endpoint-url "$ENDPOINT_URL" --acl public-read --cache-control "max-age=300"
+            echo "Uploading clash_subscription.yaml..."
+            aws s3 cp clash_subscription.yaml "$BUCKET_NAME/clash_subscription.yaml" \
+              --endpoint-url "$ENDPOINT_URL" \
+              --acl public-read \
+              --cache-control "max-age=300" || echo "Failed to upload clash_subscription.yaml"
           fi
+          
           if [ -f "index.html" ]; then
-            aws s3 cp index.html "$BUCKET_NAME/index.html" --endpoint-url "$ENDPOINT_URL" --acl public-read --content-type "text/html" --cache-control "max-age=300"
+            echo "Uploading index.html..."
+            aws s3 cp index.html "$BUCKET_NAME/index.html" \
+              --endpoint-url "$ENDPOINT_URL" \
+              --acl public-read \
+              --content-type "text/html" \
+              --cache-control "max-age=300" || echo "Failed to upload index.html"
           fi
+          
           echo ">>> DEBUG: Upload to ArvanCloud finished."
 
       - name: Generate Cache Buster Version
         run: |
           echo ">>> DEBUG: Generating cache buster file..."
           echo "$(date +%s)" > cache_version.txt
-          echo ">>> DEBUG: Cache buster generated."
+          echo ">>> DEBUG: Cache buster generated: $(cat cache_version.txt)"
 
       - name: Commit and Push final files to GitHub
         run: |
           echo ">>> DEBUG: Starting commit and push process..."
+          
+          # Configure git
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          echo "--- Adding files to git..."
-          if [ -f "all_live_configs.json" ]; then git add all_live_configs.json; fi
-          if [ -f "clash_subscription.yaml" ]; then git add clash_subscription.yaml; fi
-          if [ -f "cache_version.txt" ]; then git add cache_version.txt; fi
+          # Check current status
+          git status
           
-          if git diff-index --quiet HEAD; then
+          echo "--- Adding files to git..."
+          if [ -f "all_live_configs.json" ]; then 
+            git add all_live_configs.json
+            echo "Added all_live_configs.json"
+          fi
+          if [ -f "clash_subscription.yaml" ]; then 
+            git add clash_subscription.yaml
+            echo "Added clash_subscription.yaml"
+          fi
+          if [ -f "cache_version.txt" ]; then 
+            git add cache_version.txt
+            echo "Added cache_version.txt"
+          fi
+          
+          # Clean up backup files
+          if [ -f "clash_subscription.yaml.bak" ]; then
+            rm clash_subscription.yaml.bak
+            echo "Cleaned up backup file"
+          fi
+          
+          # Check if there are changes to commit
+          if git diff --staged --quiet; then
             echo ">>> DEBUG: No new changes to commit."
           else
             echo "--- Committing changes..."
-            git commit -m "📊 Update configs [$(date -u)] [skip ci]"
+            git commit -m "📊 Update configs [$(date -u '+%Y-%m-%d %H:%M:%S UTC')] [skip ci]"
+            
             echo "--- Pushing to remote..."
-            git push
+            git push || {
+              echo "Push failed, trying to pull and push again..."
+              git pull --rebase
+              git push
+            }
             echo ">>> DEBUG: Push successful."
           fi
