--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/proxy.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "regions": ["iad1"]
     }
   }
 }
