--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,8 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 30,
-      "memory": 512
+    "api/proxy.js": {
+      "runtime": "nodejs18.x"
     }
-  },
-  "regions": ["iad1"],
-  "rewrites": [
-    {
-      "source": "/ping",
-      "destination": "/api/proxy"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "POST, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        }
-      ]
-    }
-  ]
+  }
 }
