--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
   "name": "v2v-project",
   "version": "1.0.0",
-  "description": "V2V Proxy Ping Service",
-  "private": true,
   "engines": {
-    "node": "18.x"
-  },
-  "scripts": {
-    "build": "echo 'No build step required'"
-  },
-  "dependencies": {},
-  "devDependencies": {},
-  "keywords": ["proxy", "ping", "v2ray"],
-  "author": "",
-  "license": "MIT"
+    "node": "18"
+  }
 }
