--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "v2v-project",
   "version": "1.0.0",
+  "private": true,
   "engines": {
-    "node": "18"
+    "node": "22.x"
   }
 }
